# bids_sm_model_spec_gui

./: DoubleScrolledFrame.py  LICENSE  README.md  edges_setup.py  input_setup.py  make_json.py  nodes_transformations_setup.py  nodes_transformations_setup_try_tabs.py  pyproject.toml  utils.py
assets/: pybids_xform_schema_JM.json
src/: input_setup.py  main_gui.py  nodes_transformations_setup.py  nodes_transformations_setup_try_tabs.py  utils.py
stats_spec_architect/: __main__.py  edges_setup.py  input_setup.py  make_json.py  nodes_transformations_setup.py  nodes_transformations_setup_try_tabs.py  utils.py
