[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "stats_spec_architect"
version = "0.1.0"
description = "GUI for generating BIDS Stats Model spec json files."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jsonref>=1.1.0",
    "numpy>=2.1.1",
    "ttkbootstrap>=1.10.1",
]

[project.scripts]
make_spec = "stats_spec_architect.__main__:main"
